# anime-dl

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  build.rs  justfile
.cargo/: config.toml
.github/: CONVENTIONAL_COMMITS.md  auto-merge.yml  config.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md  renovate.json
.github/workflows/: auto-merge.yml  ci.yml  conventional-commits.yml  pre-commit.yml  prek.yml  publish.yml  qa.yml  tests.yml
assets/: watching_query.graphql
ci/: ubuntu-install-packages
graphql/: progress_mutation.graphql  user_query.graphql
schema/: anilist_schema.json  progress_mutation.graphql  progress_query.graphql  watching_query.graphql
src/: anilist.rs  anime.rs  api.rs  app.rs  archive.rs  cli.rs  config.rs  error.rs  errors.rs  file.rs  lib.rs  macros.rs  main.rs  my_async.rs  parser.rs  proxy.rs  range.rs  scraper.rs  tasks.rs  test.rs  tui.rs  utils.rs
src/api/: anilist.rs  mod.rs
src/api/assets/: anilist_schema.graphql
src/archive/: animeworld.rs  mod.rs
src/archives/: animeworld.rs  archive.rs  mod.rs
src/cli/: download.rs  mod.rs  stream.rs
src/tui/: input.rs  mod.rs  progress.rs  selector.rs  style.rs  table.rs
src/ui/: input.rs  mod.rs  progress.rs  selector.rs  table.rs  tui.rs
src/utils/: bars.rs  crypt.rs  macros.rs  mod.rs  range.rs  tui.rs
src/utils/assets/: progress_query.graphql
tests/: test.rs
