[package]
name = "anime-dl"
edition = "2024"
version = "1.6.4"
description = "Efficient cli app for downloading anime"
readme = "README.md"
authors = ["Gabriele Belluardo <gabriele.belluardo@outlook.it>"]
homepage = "https://github.com/gabelluardo/anime-dl"
repository = "https://github.com/gabelluardo/anime-dl"
documentation = "https://github.com/gabelluardo/anime-dl/blob/main/README.md"
license = "GPL-3.0+"

include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "adl"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.release]
tag-name = "v{{version}}"
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"

[features]
default = ["anilist"]
anilist = ["graphql_client", "serde", "toml_edit"]

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
indicatif = "0.18.0"
owo-colors = "4.2"
rand = "0.9"
rustyline = "16.0"
scraper = "0.24.0"
tabled = "0.20.0"
which = "8.0.0"

clap = { version = "4.5.40", features = ["derive", "env"] }
reqwest = { default-features = false, version = "0.12.23", features = [
    "json",
    "rustls-tls",
] }
tokio = { default-features = false, version = "1.47.1", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }

# Optional deps...

## anilist
graphql_client = { version = "0.14.0", optional = true }
serde = { version = "1.0.219", optional = true }
toml_edit = { version = "0.23.6", optional = true }
