[package]
name = "anime-dl"
edition = "2024"
version = "1.7.0"
description = "Efficient cli app for downloading anime"
readme = "README.md"
authors = ["Gabriele Belluardo <gabriele.belluardo@outlook.it>"]
homepage = "https://github.com/gabelluardo/anime-dl"
repository = "https://github.com/gabelluardo/anime-dl"
documentation = "https://github.com/gabelluardo/anime-dl/blob/main/README.md"
license = "GPL-3.0+"

include = ["src/**/*", "schema/*", "build.rs", "LICENSE", "README.md"]

[[bin]]
name = "adl"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.release]
tag-name = "v{{version}}"
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
indicatif = "0.18.3"
graphql_client = "0.16.0"
owo-colors = "4.2"
rand = "0.10.0"
rustyline = "17.0"
scraper = "0.25.0"
serde = "1.0.228"
tabled = "0.20.0"
toml_edit = "0.25.1"
which = "8.0.0"

clap = { version = "4.5.53", features = ["derive", "env"] }
reqwest = { default-features = false, version = "0.13.2", features = [
    "json",
    "rustls",
] }
tokio = { default-features = false, version = "1.48.0", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
thiserror = "2.0.18"

[build-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
serde_json = "1.0"

[dev-dependencies]
paste = "1.0"
serial_test = { version = "3.4.0", features = ["file_locks"] }
